more fixes for english translations

--- a/config/locales/gems/routes/de.yml
+++ b/config/locales/gems/routes/de.yml
@@ -4,3 +4,6 @@ de:
     users: "nutzer"
     contacts: "kontakt"
     organizations: "organisationen"
+    impressum: "impressum"
+    haeufige-fragen: "haeufige-fragen"
+    ueber-uns: "ueber-uns"
