--- a/config/locales/views/pages/ar.yml
+++ b/config/locales/views/pages/ar.yml
@@ -1,7 +1,9 @@
 ar:
   pages:
     home:
-      title: "عروض دعم للأطفال والشبان والأسر"
+      title:
+        family: "عروض دعم للأطفال والشبان والأسر"
+        refugees: "Unterstützungsangebote für Flüchtlinge" # TODO!!
       how:
         heading: "Wie funktioniert clarat?"
         text: |
@@ -36,6 +38,7 @@ ar:
         أو ما هي مشكلتك؟ سوف تعرض لك كلارات عروضا أكثر بالقرب منك
         {start_page} أو اذهب الى الصفحة الرئيسية
         هناك يمكنك من خلال الصور المستديرة أن تبحث عن المساعدة المناسبة
+      link_text: "here" # TODO!!
 
     agb:
       title: "إرشادات قانونية"
@@ -87,7 +90,7 @@ ar:
         </p>
     faq:
       title: "أسئلة شائعة"
-      
+
     privacy:
       title: "Datenschutz"
       heading: "Datenschutzhinweise"
