--- a/config/locales/cells/frequently_asked_questions/en.yml
+++ b/config/locales/cells/frequently_asked_questions/en.yml
@@ -122,7 +122,7 @@ en:
       link_3:
         name: "here"
         var: "link_to_about_us"
-        url: "http://www.clarat.org/ueber-uns"
+        url: "http://www.clarat.org/en/refugees/about-us"
         target: "_blank"
     question_10:
       question: "Who finances clarat?"
