--- a/config/locales/views/shareds/de.yml
+++ b/config/locales/views/shareds/de.yml
@@ -9,9 +9,13 @@ de:
       welcome:
         advanced_search: |
           Willst du deine Suche genauer machen? Dann klicke hier. Es öffnet sich eine Box mit Auswahl-Möglichkeiten.
-        world_switch: |
-          Wenn du hier klickst, kommst du zu clarat Family. In clarat Family kannst du nach Hilfe für Kinder,
-          Jugendliche und Familien suchen.
+        world_switch:
+          family: |
+            Wenn du hier klickst, kommst du zu clarat Family. In clarat Family kannst du nach Hilfe für Kinder,
+            Jugendliche und Familien suchen.
+          refugees: |
+            Wenn du hier klickst, kommst du zu clarat Refugees. In clarat-refugees kannst du nach Hilfe für
+            Flüchtlinge suchen.
     offer:
       encounter:
             hotline: "Telefon"
