--- a/config/locales/views/organizations/en.yml
+++ b/config/locales/views/organizations/en.yml
@@ -3,4 +3,4 @@ en:
     show:
       who: "What does the organization do?"
       where: "Where is the organization located?"
-      offers_all: "What kind of help does this organization offer?"
+      offers_all: "What kind of help does the organization offer?"
