--- a/config/locales/views/subscriptions/en.yml
+++ b/config/locales/views/subscriptions/en.yml
@@ -6,4 +6,4 @@ en:
     shared:
       new:
         placeholder: "Email address"
-        button: "Subscribe to newsletter"
+        button: "Subscribe to our newsletter"
