Implementation for non desktop

--- a/config/locales/views/shareds/de.yml
+++ b/config/locales/views/shareds/de.yml
@@ -10,10 +10,10 @@ de:
         advanced_search: |
           Willst du deine Suche genauer machen? Dann klicke hier. Es öffnet sich eine Box mit Auswahl-Möglichkeiten.
         world_switch:
-          family: |
+          family:
             Wenn du hier klickst, kommst du zu clarat Family. In clarat Family kannst du nach Hilfe für Kinder,
             Jugendliche und Familien suchen.
-          refugees: |
+          refugees:
             Wenn du hier klickst, kommst du zu clarat Refugees. In clarat-refugees kannst du nach Hilfe für
             Flüchtlinge suchen.
     offer:
