localized faqs routes on empty search results and small fix in search_result script for exact_location

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -100,3 +100,6 @@ de:
         forum: "Forum"
         online-course: "Online-Kurs"
         portal: "Adressliste"
+
+    routes:
+      faq: "haeufige-fragen"
