--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -100,3 +100,6 @@ en:
         forum: "forum"
         online-course: "online course"
         list: "address list"
+
+    routes:
+      faq: "frequently-asked-questions"
