fixed wrong locale node entry 'list:' and fixed c&p error with locales/ar.yml and locales/gems/routes/ar.yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -99,7 +99,7 @@ en:
         chat: "chat"
         forum: "forum"
         online-course: "online course"
-        list: "address list"
+        portal: "address list"
 
     routes:
       faq: "frequently-asked-questions"
