--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -82,4 +82,4 @@ fr:
         chat: "Chat"
         forum: "Forum"
         online-course: "Online-Kurs"
-        list: "Adressliste"
+        portal: "Adressliste"
