--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -83,4 +83,4 @@ pl:
         chat: "Chat"
         forum: "Forum"
         online-course: "Online-Kurs"
-        list: "Adressliste"
+        portal: "Adressliste"
