--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -83,4 +83,4 @@ ru:
         chat: "Chat"
         forum: "Forum"
         online-course: "Online-Kurs"
-        list: "Adressliste"
+        portal: "Adressliste"
