--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -80,4 +80,4 @@ tr:
         chat: "Sohbet"
         forum: "Forum"
         online-course: "Online kurs"
-        list: "Adres listesi"
+        portal: "Adres listesi"
