--- a/config/locales/gems/routes/ar.yml
+++ b/config/locales/gems/routes/ar.yml
@@ -1,6 +1,6 @@
 ar:
   routes:
-    offers: "angebote"
-    users: "nutzer"
-    contacts: "kontakt"
-    organizations: "organisationen"
+    offers: "عروض"
+    users: "مستخدم"
+    contacts: "إتصال"
+    organizations: "منظمة"
