Minor language change

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -71,7 +71,7 @@ en:
         gender: "Gender"
         approach: "By which means?"
     search_results:
-      more: "More virtual offers"
+      more: "More remote offers"
       show_personal: "Show local offers"
       bridge: "for the search term"
       enclosing: ""
