for clarat-org/clarat#688:
for clarat-org/clarat#626:
- neue locale nodes in locales/[de, en].yml: js.search.pagination mit
drei subnodes

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -69,6 +69,10 @@ de:
         target_audience: "Hilfe für wen?"
         gender: "Geschlecht"
         approach: "Auf welchem Weg?"
+      pagination:
+        next: "Weiter"
+        gap: "…"
+        back: "Zurück"
     search_results:
       more: "Weitere Telefon- und Onlineangebote"
       show_personal: "Zeige lokale Angebote"
