remove live chat reference from english faqs

--- a/config/locales/cells/frequently_asked_questions/en.yml
+++ b/config/locales/cells/frequently_asked_questions/en.yml
@@ -466,9 +466,7 @@ en:
         <li>
         Or we don’t yet have any matching offerings in our database. In order
         for us to change that, we need your feedback. If you can’t find what
-        you’re looking for, please send an e-mail to %{mailto_clarat}. You can
-        also contact us via our live chat, which you can find on the bottom
-        right of the page.
+        you’re looking for, please send an e-mail to %{mailto_clarat}.
         </li>
         </ul>
         </p>
