update _base and added additional logic

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -132,6 +132,20 @@ de:
               female: "Väter mit Töchtern"
             special_male: "Familien mit Jungs"
             special_female: "Familien mit Mädchen"
+          refugees_children: "geflüchtete Kinder"
+          refugees_adolescents: "geflüchtete Jugendliche"
+          refugees_children_and_adolescents: "geflüchtete Kinder und Jugendliche"
+          refugees_umf: "unbegleitete minderjährige Flüchtlinge"
+          refugees_ujf: "unbegleitete junge Flüchtlinge"
+          refugees_families: "geflüchtete Familien"
+          refugees_pre_asylum_procedure: "Flüchtlinge vor dem Asylantrag"
+          refugees_asylum_procedure: "Flüchtlinge im Asylverfahren"
+          refugees_deportation_decision: "Flüchtlinge mit Abschiebebescheid"
+          refugees_toleration_decision: "Flüchtlinge mit Duldung"
+          refugees_residence_permit: "Flüchtlinge mit Aufenthaltserlaubnis"
+          refugees_registered: "registrierte Flüchtlinge"
+          refugees_parents: "geflüchtete Eltern"
+          refugees_general: "Flüchtlinge"
 
     categories_sidebar:
       all_categories: "Alle Kategorien"
