minor faq changes

--- a/config/locales/cells/frequently_asked_questions/de.yml
+++ b/config/locales/cells/frequently_asked_questions/de.yml
@@ -592,7 +592,7 @@ de:
         schnell und unkompliziert Hilfe bei deiner Organisation finden.
         <br>
         Oder die Angebote deiner Organisation helfen Flüchtlingen, die nach
-        Deutschland geflüchtet sind. Deshalb haben wir sie bei <br>clarat
+        Deutschland geflüchtet sind. Deshalb haben wir sie bei <b>clarat
         refugees</b> aufgenommen. Denn wir wollen den Flüchtlingen schnell und
         unkompliziert zeigen, wo sie Hilfe finden.
     question_2:
@@ -646,8 +646,9 @@ de:
         aufgebaut. Es kann also sein, dass wir noch nicht alle Angebote deiner
         Organisation aufnehmen konnten. Oder wir haben vorerst entschieden, dass
         nicht alle Angebote deiner Organisation bei clarat aufgenommen werden
-        können. Du findest bei <b>clarat family</b> vorerst:
+        können.
         <p>
+        Du findest bei <b>clarat family</b> vorerst:
         <ul>
         <li>
         nur Angebote, die Menschen mit Problemen helfen
