--- a/config/locales/cells/frequently_asked_questions/en.yml
+++ b/config/locales/cells/frequently_asked_questions/en.yml
@@ -615,8 +615,9 @@ en:
         construction, it is possible that we have not yet been able to include
         all of your organization’s offerings on clarat, or we may have decided
         that not all of your organization’s offerings can be included on clarat
-        at this time. on <b>clarat family</b> you can only find:
+        at this time.
         <p>
+        On <b>clarat family</b> you can only find:
         <ul>
         <li>
         offerings that help people with problems
