DANGER commit! merge all locales of a language into a single file

--- a/config/locales/gems/routes/de.yml
+++ b/config/locales/gems/routes/de.yml
@@ -7,3 +7,16 @@ de:
     impressum: "impressum"
     haeufige-fragen: "haeufige-fragen"
     ueber-uns: "ueber-uns"
+    faq: "haeufige-fragen"
+    '404': "404"
+    datenschutzhinweise: "datenschutzhinweise"
+    definitions: "definitions"
+    emails: "emails"
+    new: "new"
+    preview: "preview"
+    rechtliche-hinweise: "rechtliche-hinweise"
+    search_locations: "search_locations"
+    subscribe: "subscribe"
+    subscriptions: "subscriptions"
+    unsubscribe: "unsubscribe"
+    update_requests: "update_requests"
