--- a/config/locales/gems/routes/en.yml
+++ b/config/locales/gems/routes/en.yml
@@ -7,3 +7,4 @@ en:
     impressum: "site-notice"
     haeufige-fragen: "frequently-asked-questions"
     ueber-uns: "about-us"
+    faq: "frequently-asked-questions"
