--- a/config/locales/gems/routes/tr.yml
+++ b/config/locales/gems/routes/tr.yml
@@ -4,3 +4,7 @@ tr:
     users: "kullanıcılar"
     contacts: "iletişim"
     organizations: "organizasyonlar"
+    impressum: "impressum"
+    haeufige-fragen: "haeufige-fragen"
+    ueber-uns: "ueber-uns"
+    faq: "haeufige-fragen"
