--- a/config/locales/gems/routes/ar.yml
+++ b/config/locales/gems/routes/ar.yml
@@ -4,3 +4,7 @@ ar:
     users: "مستخدم"
     contacts: "إتصال"
     organizations: "منظمة"
+    impressum: "impressum"
+    haeufige-fragen: "haeufige-fragen"
+    ueber-uns: "ueber-uns"
+    faq: "haeufige-fragen"
