--- a/config/locales/gems/routes/fr.yml
+++ b/config/locales/gems/routes/fr.yml
@@ -4,3 +4,7 @@ fr:
     users: "nutzer"
     contacts: "kontakt"
     organizations: "organisationen"
+    impressum: "impressum"
+    haeufige-fragen: "haeufige-fragen"
+    ueber-uns: "ueber-uns"
+    faq: "haeufige-fragen"
